# pngsquish

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  pngsquish.sln  pngsquish.vcxproj  pngsquish.vcxproj.filters
inc/: buffer.hpp  defs.hpp  gui.hpp  head.hpp  matrix.hpp  perspective.hpp  random.hpp
lib/: CMakeLists.txt  deflatestatic.lib
lib/glad/: glad.h
src/: buffer.cpp  buffer.hpp  file.cpp  glad.c  gui.cpp  head.hpp  image.cpp  main.cpp  matrix.cpp  perspective.cpp  preview.cpp  random.cpp  random.hpp  stb_image.cpp
